2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Parser/Parser.cs: Fixed #region ... #endregion end region position.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Parser/CSharpVisitor.cs: Corrected type location.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Update MD version.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/ConsoleProject.xpt.xml, templates/GnomeSharp2Project.xpt.xml,
	  templates/GtkSharp2Project.xpt.xml,
	  templates/GladeSharp2Project.xpt.xml, templates/Library.xpt.xml,
	  templates/EmptyCSharpFile.xft.xml, templates/EmptyProject.xpt.xml,
	  templates/AssemblyInfo.xft.xml: Make template categories translatable.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpBindingCompilerManager.cs: Manually create CompilerError for certain
	  errors, as the CreateErrorFromString method returned null in that
	  scenario. Fixes error caused by trying to use a null CompilerError.

2008-01-14  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: fixed Bug 350881 - Code completion not
	  working in a specific case.

2008-01-11  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpLanguageBinding.cs, CSharpBindingCompilerManager.cs: Don't always
	  set the DEBUG define when debug info is emitted. However, add it to the
	  defines list for new debug configurations.

2008-01-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed Bug 350864 - Refactory tools - renaming.

2008-01-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed 350861: Autocomplete displays hidden items

2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: Fixed some infinite
	  loops when a class inherits from itself due to invalid code. Fixes bug
	  #350855.

2008-01-03  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpBindingCompilerManager.cs: Check C# compiler exit code to detect