@@ -10,7 +10,6 @@ REFS =  \
 	$(GLIB_SHARP_LIBS) \
 	$(GTK_SHARP_LIBS) \
 	$(MONO_ADDINS_LIBS) \
-	-r:$(top_builddir)/build/AddIns/MonoDevelop.SourceEditor.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Components.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.Gui.dll \
@@ -29,7 +28,6 @@ FILES =  \
 	CSharpEnhancedCodeProvider.cs \
 	CSharpLanguageBinding.cs \
 	FormattingStrategy/CSharpFormattingProperties.cs \
-	FormattingStrategy/CSharpFormattingStrategy.cs \
 	FormattingStrategy/CSharpIndentEngine.cs \
 	FormattingStrategy/CSharpIndentEngineStack.cs \
 	gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs \
