@@ -1,3 +1,12 @@
+2008-02-09  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/CSharpTextEditorExtension.cs, Gui/FormattingPanel.cs,
+	  CSharpBinding.addin.xml, CSharpBinding.mdp,
+	  FormattingStrategy/CSharpFormattingStrategy.cs,
+	  gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
+	  gtk-gui/CSharpBinding.CompilerOptionsPanelWidget.cs, Makefile.am:
+	  Removed SourceEditor dependency.
+
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
 	* Parser/Parser.cs: Fixed #region ... #endregion end region position.
